--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -11,5 +11,12 @@ services:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - mongo_data:/data/db
 
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
+    enviroment:
+      REDIS_URL: redis://localhost:6379
+
 volumes:
   mongo_data:
